Added manual trigger of questionnaires from ContextCard

--- a/com.aware.plugin.esm.flexible/src/main/res/values/strings.xml
+++ b/com.aware.plugin.esm.flexible/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="plugin_esm_flexible">Plugin: ESM Flexible</string>
+    <string name="bt_trigger">Trigger questionnaire</string>
+    <string name="tv_text">Click to trigger the questionnaire</string>
 </resources>
