--- a/com.aware.plugin.esm.flexible/src/main/res/values/strings.xml
+++ b/com.aware.plugin.esm.flexible/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="plugin_esm_flexible">Plugin: ESM Flexible</string>
-    <string name="bt_trigger">Trigger questionnaire</string>
-    <string name="tv_text">Click to trigger the questionnaire</string>
+    <string name="manual_trigger_button">Trigger questionnaire</string>
+    <string name="manual_trigger_text">Click to trigger the questionnaire</string>
+    <string name="manual_trigger_toast">There are no questionnaires to trigger</string>
 </resources>
